[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/turret.png" type="Texture" id=1]
[ext_resource path="res://objects/Player.gd" type="Script" id=2]
[ext_resource path="res://sounds/move.wav" type="AudioStream" id=3]
[ext_resource path="res://objects/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/laser.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/no_ammo.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "blink"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="Node2D"]
script = ExtResource( 2 )
bullet_scene = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
pitch_scale = 1.5
bus = "Sound"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
bus = "Sound"

[node name="NoAmmoSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0
pitch_scale = 1.3
bus = "Sound"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/blink = SubResource( 2 )
